--- a/howto.html
+++ b/howto.html
@@ -19,7 +19,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a href="home.html" class="navbar-brand active">&#8486; H E M</a>
+			<a href="index.html" class="navbar-brand active">&#8486; H E M</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-right" id="Navi">
 			<ul class="nav navbar-nav">
