--- a/howto.html
+++ b/howto.html
@@ -36,7 +36,7 @@
 
 <div class="row">
 	<div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-xs-offset-5">
-		<button class="btn btn-lg" type="submit">Download <span class="glyphicon glyphicon-download"></span></button>
+		<a href="https://github.com/twbs/bootstrap/releases/download/v4.0.0-alpha.6/bootstrap-4.0.0-alpha.6-dist.zip"><button class="btn btn-lg" type="submit">Download <span class="glyphicon glyphicon-download"></span></button></a>
 	</div>
 </div>
 </div>
