--- a/howto.html
+++ b/howto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" href="http://www.freeiconspng.com/uploads/question-mark-icon-jpg-18.ico">
 	<title>How to use?</title>
 	<meta charset="utf-8">
 	<meta charset="utf-8" name="description" content="content delivery etwork url for bootsrtap style frame">
@@ -35,8 +36,8 @@
 
 
 <div class="row">
-	<div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-xs-offset-5">
-		<a href="https://github.com/twbs/bootstrap/releases/download/v4.0.0-alpha.6/bootstrap-4.0.0-alpha.6-dist.zip"><button class="btn btn-lg" type="submit">Download <span class="glyphicon glyphicon-download"></span></button></a>
+	<div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-xs-offset-4">
+		<a href="https://github.com/twbs/bootstrap/releases/download/v4.0.0-alpha.6/bootstrap-4.0.0-alpha.6-dist.zip"><button class="btn btn-lg btn-purple" type="submit" style="border-radius: 5px;">Download <span class="glyphicon glyphicon-download"></span></button></a>
 	</div>
 </div>
 </div>
