--- a/howto.html
+++ b/howto.html
@@ -13,7 +13,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" style="padding-right: 5px;">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-right: 5px;">
 		<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#Navi">
 			<span class="icon-bar"></span>
