--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body style="background-color: ; padding-bottom: 150px;padding-top: 100px;">
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" style="padding-right: 5px;">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-right: 5px;">
 		<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#Navi">
 			<span class="icon-bar"></span>
