--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a href="index.html" class="navbar-brand active">&#8486; H E M</a>
+			<a href="index.html" class="navbar-brand" style="font-family: Tangerine;">&#8486; H E M</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-right" id="Navi">
 			<ul class="nav navbar-nav">
