--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8" name="authon" content="khatavakar">
 	<meta charset="utf-8" name="viewport" content="width=device-width intital-scale=1.0">
 	<script src="https://code.jquery.com/jquery.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
