--- a/detail.html
+++ b/detail.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width intital-scale=1.0">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
+	<link rel="stylesheet" type="text/css" href="cons/css/hover.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -21,12 +22,13 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a href="index.html" class="navbar-brand" style="font-family: Tangerine;">&#8486; H E M</a>
+			<a href="index.html" class="navbar-brand hvr-grow" style="font-family: Tangerine;">&#8486; H E M</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-right" id="Navi">
 			<ul class="nav navbar-nav">
+				<li><a href="index.html">Home</a></li>
 				<li><a href="howto.html">How to?</a></li>
-				<li><a href="detail.html">What is?</a></li>
+				<li class="active"><a href="detail.html">What is?</a></li>
 			</ul>
 	</div>
 </nav>
