--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 	<meta charset="utf-8" name="authon" content="khatavakar">
 	<meta charset="utf-8" name="viewport" content="width=device-width intital-scale=1.0">
 	<script src="https://code.jquery.com/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="cons/css/hover.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
-<body style="background-color: ; padding-bottom: 150px;padding-top: 100px;">
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-right: 5px;">
+<body style="padding-bottom: 150px;padding-top: 100px;">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-right: 5px; ">
 		<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#Navi">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-			<a href="index.html" class="navbar-brand" style="font-family: Tangerine;">&#8486; H E M</a>
+			<a href="index.html" class="navbar-brand hvr-grow" style="font-family: Tangerine;">&#8486; H E M</a>
 		</div>
 		<div class="collapse navbar-collapse navbar-right" id="Navi">
 			<ul class="nav navbar-nav">
+				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="howto.html">How to?</a></li>
 				<li><a href="detail.html">What is?</a></li>
 			</ul>
@@ -34,13 +36,13 @@
 </nav><!--end of navbar-->
 	<div  class="container" style="background-color: #ebebe0; padding: 35px;">
 		<div class="row">
-			<h1 style="text-align: center; font-size: 45px;">Bootstrap link's to CDN</h1>
+			<h1 style="text-align: center; font-size: 45px; color: #87abe5">Bootstrap link's to CDN</h1>
 		</div>
-		<div class="row">
+		<div class="row" style="text-align: center;">
 			<h3>just copy links given below to your html code & enjoy the beautiful power of Bootstrap</h3>
 		</div>
 		<div class="row">
-		<h2>CSS</h2>
+		<h2 style="color: #87abe5;">CSS</h2>
 			<h4>Complete link for bootstrap css files:</h4>
 			<pre style="font-size: 20px;"> https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css </pre>
 
@@ -49,7 +51,7 @@
 			<h4>just copy whole line and paste inside of triangular brackets "<..code..>" of your head tag of HTML code</h4>
 		</div><hr/>
 		<div class="row">
-			<h2>JavaScript</h2>	
+			<h2 style="color: #87abe5;">JavaScript</h2>	
 			<h4>Complete link for bootstrap JavaScript files:</h4>
 			<pre style="font-size: 20px;">https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js</pre>
 			<h4>Readymade scripts tag for ready to use:</h4>
