--- a/howto.html
+++ b/howto.html
@@ -32,11 +32,16 @@
 			</ul>
 	</div>
 </nav><!--end of navbar-->
-<div class="container" style="background-color: #ebebe0;">
+<div class="container" style="background-color: #ebebe0; padding: 35px;">
 	
-
-
-
+<div class="row">
+	<div class="col-lg-4">
+		<img src="cons/girl.png" class="img-cirlce" height="300px" width="300px">
+	</div>
+	<div class="col-lg-8">
+		<h1 style="font-size: 45px;">How to use Bootstrap ?</h1>
+	</div>
+</div>
 
 <div class="row">
 	<div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5 col-xs-offset-4">
