--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
 </head>
-<body style="padding-bottom: 150px;padding-top: 100px;">
+<body style="padding-bottom: 80px;padding-top: 100px;">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-right: 5px; ">
 		<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#Navi">
@@ -71,7 +71,9 @@
 			<h4> Link for jquery plu-ins: </h4>
 			<pre style="font-size: 20px;">src="https://code.jquery.com/jquery.js"</pre>
 			<h4>just copy the line given above and place it as attribute in your head section to a blank script tag other than your working one.</h4>
-			
+		</div>
+		<div class="row">
+			<h4>PUBLISHED UNDER MIT LICENSE/prathameshkt98.github.io 2017</h4>
 		</div>
 </div><!--end of container-->
 </body>
